--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>notebooks-baku</title>
+<head> 
+<title>notebook-baku</title> 
 </head>
 <body>
 
-<h3>notebook</h3>
-<ul>
-<li><a href="Mozart/Mozart.html">Mozart</a></li>
-</ul>
+<p><a href="/index.html">本文本</a>Mozart</p>
+
 </body>
 </html>
