--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p><a href="/index.html">本文本</a>Mozart</p>
+<p><a href="Mozart/Mozart.html">本文本</a>Mozart</p>
 
 </body>
 </html>
