--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 
-<p><a href="Mozart/Mozart.html">本文本</a>Mozart</p>
-
+<ul>
+<li><a href="Mozart/Mozart.html">本文本</a>Mozart</li>
+</ul>
+  
 </body>
 </html>
