--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <title>notebook-baku</title> 
 </head>
 <body>
-
+  
 <ul>
-<li><a href="Mozart/Mozart.html">本文本</a>Mozart</li>
+  <li><a href="Mozart/Mozart.html">Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
 </ul>
   
 </body>
