--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
   
 <ul>
-  <li><a href="Mozart/Mozart.html">Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
+  <li><a href="Mozart/Mozart.html">Mozart</li>
+  <li>other</li>
+  <li>other</li>
 </ul>
   
 </body>
