--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <h3>notebook-baku</h3>
   
 <ul>
-  <li><a href="Mozart/Mozart.html">Mozart</li>
-  <li>other</li>
+  <li><a href="Mozart/Mozart.html">莫扎特</li>
+  <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
   <li>other</li>
 </ul>
   
