--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <ul>
   <li><a href="Mozart/Mozart.html">莫扎特</li>
   <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
-  <li>other</li>
+  <li><a href="thedesignofeverydaythings/index.html">设计心理学</li>
+  <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
+  <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
+  <li><a href="leananalytics/index.html">精益数据分析</li>
+  <li><a href="leananalytics/index.html">精益数据分析</li>
 </ul>
   
 </body>
