--- a/index.html
+++ b/index.html
@@ -14,6 +14,48 @@
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
+  <li><a href="thelonelycity/index.html">孤独的城市</li>
+  <li><a href="environmentalpsychology/index.html">环境心理学</li>
+  <li><a href="knowledgeofcoffee/index.html">精品咖啡学</li>
+  <li><a href="thelifeofmichaelangelo/index.html">米开朗琪罗传</li>
+  <li><a href="el_amoren_los_tiempos_del_colera/index.html">霍乱时期的爱情</li>
+  <li><a href="whatilearnedlosingamilliondollars/index.html">止损</li>
+  <li><a href="quackery/index.html">荒诞医学史</li>
+  <li><a href="madetostick/index.html">让创意更有粘性</li>
+  <li><a href="statisticsforthebehavioralsciences/index.html">行为科学统计</li>
+  <li><a href="cognitivepsychology/index.html">认知心理学</li>
+  <li><a href="zenandartofmotorcyclemaintenance/index.html">禅与摩托车维修艺术</li>
+  <li><a href="howgoogleworks/index.html">重新定义公司 谷歌是如何运营的</li>
+  <li><a href="mechanics/index.html">力学相关</li>
+  <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
+  <li><a href="childenofodin/index.html">奥丁的子女</li>
+  <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
+  <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
+  <li><a href="tenyearsofrebirth/index.html">十年轮回</li>
+  <li><a href="pre-suasion/index.html">先发影响力</li>
+  <li><a href="economicslecturenotes/index.html">薛兆丰经济学讲义</li>
+  <li><a href="influence/index.html">影响力</li>
+  <li><a href="scarcity/index.html">稀缺</li>
+  <li><a href="toobigtoknow/index.html">知识的边界</li>
+  <li><a href="story/index.html">故事</li>
+  <li><a href="thestoryofart/index.html">艺术的故事</li>
+  <li><a href="themillionairenextdoor/index.html">邻家的百万富翁</li>
+  <li><a href="triz/index.html">创新算法</li>
+  <li><a href="sulvzhiwang/index.html">素履之往</li>
+  <li><a href="insheepsclothing/index.html">如何与控制型人格相处</li>
+  <li><a href="originals/index.html">离经叛道</li>
+  <li><a href="thetimelesswayofbuilding/index.html">建筑的永恒之道</li>
+  <li><a href="motivationandpersonality/index.html">动机与人格</li>
+  <li><a href="theartofgamedesign/index.html">游戏设计艺术</li>
+  <li><a href="microinteractions/index.html">微交互</li>
+  <li><a href="aboutface/index.html">交互设计精髓</li>
+  <li><a href="designingwiththemindinmind/index.html">认知与设计</li>
+  <li><a href="restpectforacting/index.html">尊重表演艺术</li>
+  <li><a href="theexperienceeconomy/index.html">体验经济</li>
+  <li><a href="changebydesign/index.html">IDEO</li>
+  <li><a href="sprint/index.html">设计冲刺</li>
+  <li><a href="theelephantintheroom/index.html">房间里的大象</li>
+  <li><a href="thesocialanimal/index.html">社会性动物</li>
 </ul>
   
 </body>
