--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function myFunction() {
   <li><a href="sprint/index.html">设计冲刺</li>
   <li><a href="theelephantintheroom/index.html">房间里的大象</li>
   <li><a href="thesocialanimal/index.html">社会性动物</li>
-  <li><a href="themostimportantthing/index.html">投资最重要的事</li>>
+  <li><a href="themostimportantthing/index.html">投资最重要的事</li>
 </ul>
   
 </body>
