--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ function myFunction() {
   <li><a href="theelephantintheroom/index.html">房间里的大象</li>
   <li><a href="thesocialanimal/index.html">社会性动物</li>
   <li><a href="themostimportantthing/index.html">投资最重要的事</li>
+  <li><a href="theplenitude/index.html">够了！创意</li>
 </ul>
   
 </body>
