--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ function myFunction() {
   <li><a href="thesocialanimal/index.html">社会性动物</li>
   <li><a href="themostimportantthing/index.html">投资最重要的事</li>
   <li><a href="theplenitude/index.html">够了！创意</li>
+  <li><a href="businesslogisticemanagement/index.html">企业物流管理——供应链的规划、组织和控制</li>
+
 </ul>
   
 </body>
