--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ function myFunction() {
 <ul id="con">
   <li><a href="Mozart/Mozart.html">莫扎特</li>
   <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
-  <li><a href="thedesignofeverydaythings/index.html">设计心理学</li>
+  <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
+  <li><a href="livingwithcomplexity/index.html">设计心理学2：与复杂共处</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
