--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head> 
 <title>notebook-baku</title> 
@@ -28,6 +28,7 @@ function myFunction() {
   <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
   <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
   <li><a href="livingwithcomplexity/index.html">设计心理学2：与复杂共处</li>
+  <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
