--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ function myFunction() {
   <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
   <li><a href="livingwithcomplexity/index.html">设计心理学2：与复杂共处</li>
   <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
+  <li><a href="IntuitionPumps/index.html">直觉泵</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
