--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ function myFunction() {
   <li><a href="IntuitionPumps/index.html">直觉泵</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
+  <li><a href="OneDimensionalAMan/index.html">单向度的人</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
   <li><a href="thelonelycity/index.html">孤独的城市</li>
   <li><a href="environmentalpsychology/index.html">环境心理学</li>
