--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function myFunction() {
   <li><a href="childenofodin/index.html">奥丁的子女</li>
   <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
   <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
-  <li><a href="IntimateRelationships/index.html">亲密关系</li>
+  <li><a href="IntimateRelationships/index.html">社会心理学-亲密关系</li>
   <li><a href="tenyearsofrebirth/index.html">十年轮回</li>
   <li><a href="pre-suasion/index.html">先发影响力</li>
   <li><a href="economicslecturenotes/index.html">薛兆丰经济学讲义</li>
