--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ function myFunction() {
   <li><a href="howgoogleworks/index.html">重新定义公司 谷歌是如何运营的</li>
   <li><a href="mechanics/index.html">力学相关</li>
   <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
+  <li><a href="WritingOnTheWall/index.html">社交媒体简史</li>
   <li><a href="childenofodin/index.html">奥丁的子女</li>
   <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
   <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
