--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ function myFunction() {
   <li><a href="IntuitionPumps/index.html">直觉泵</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="TheFutureOfIndustrialMan/index.html">工业人的未来</li>
+  <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
+  <li><a href="ConceptOfTheCorporation/index.html">公司的概念</li>
   <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
   <li><a href="OneDimensionalMan/index.html">单向度的人</li>
   <li><a href="leananalytics/index.html">精益数据分析</li>
@@ -53,7 +55,6 @@ function myFunction() {
   <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
   <li><a href="WritingOnTheWall/index.html">社交媒体简史</li>
   <li><a href="childenofodin/index.html">奥丁的子女</li>
-  <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
   <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
   <li><a href="IntimateRelationships/index.html">社会心理学-亲密关系</li>
   <li><a href="tenyearsofrebirth/index.html">十年轮回</li>
