--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ function myFunction() {
   <li><a href="EmotionalDesign/index.html">设计心理学3：情感化设计</li>
   <li><a href="TheDesignOfFutureThings/index.html">设计心理学4：未来设计</li>
   <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
+  <li><a href="Nudge/index.html">助推</li>
   <li><a href="IntuitionPumps/index.html">直觉泵</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="TheFutureOfIndustrialMan/index.html">工业人的未来</li>
