--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ function myFunction() {
 }
 </script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -21,6 +23,31 @@ function myFunction() {
 
 <p id="count"></p>
 
+
+
+ <div class="form-group">
+       <input type="text" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
+     </div>
+<script>
+   // Write on keyup event of keyword input element
+   $(document).ready(function(){
+     $("#search").keyup(function(){
+     _this = this;
+    
+     // Show only matching TR, hide rest of them
+     $.each($("#con li"), function() {
+       if($(this).text().toLowerCase().indexOf($(_this).val().toLowerCase()) === -1)
+       {  
+           $(this).hide();
+       }
+       else
+       {
+          $(this).show();
+       }
+     });
+  });
+});
+</script>
 
   
 <ul id="con">
@@ -89,6 +116,8 @@ function myFunction() {
   <li><a href="businesslogisticemanagement/index.html">企业物流管理——供应链的规划、组织和控制</li>
 
 </ul>
-  
+
+
+
 </body>
 </html>
