--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
-<head> 
+<head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" /> 
+ 
 <title>notebook-baku</title> 
 
 <script>
