更改手机搜索触发键

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ function myFunction() {
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+
+<style type="text/css">
+        body {
+　　　　font: normal 100% Helvetica, Arial, sans-serif;
+　　}
+</style>
+
 </head>
 <body>
 
@@ -29,7 +36,7 @@ function myFunction() {
 
 
  <div class="form-group">
-       <input type="text" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
+       <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
      </div>
 <script>
    // Write on keyup event of keyword input element
