--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function myFunction() {
 <p id="count"></p>
 
 
-
+<form action="." >
  <div class="form-group">
        <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
      </div>
@@ -58,7 +58,7 @@ function myFunction() {
   });
 });
 </script>
-
+</form>
   
 <ul id="con">
   <li><a href="Mozart/Mozart.html">莫扎特</li>
