--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function myFunction() {
 <p id="count"></p>
 
 
-<form action="." >
+<form action="."  onsubmit="return false;" >
  <div class="form-group">
        <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
      </div>
