--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ function myFunction() {
 <p id="count"></p>
 
 
-<form action="."  onsubmit="return false;" >
+<form action=".">
  <div class="form-group">
        <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
+       <input type="text" style="display:none;"/>
      </div>
 <script>
    // Write on keyup event of keyword input element
