--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function myFunction() {
 <form action=".">
  <div class="form-group">
        <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
-       <input type="text" style="display:none;"/>
+       <input id="none" type="text" style="display:none;"/>
      </div>
 <script>
    // Write on keyup event of keyword input element
