--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function myFunction() {
 <script>
    // Write on keyup event of keyword input element
    $(document).ready(function(){
-     $("#search").keyup(function(){
+     $("#search").keypress(function(){
      _this = this;
     
      // Show only matching TR, hide rest of them
