--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ function myFunction() {
   <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
   <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
   <li><a href="IntuitionPumps/index.html">直觉泵</li>
+  <li><a href="StrategyBeyondTheHockeyStick/index.html">突破现实的困境</li>
   <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
   <li><a href="TheFutureOfIndustrialMan/index.html">工业人的未来</li>
   <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
