--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <li><a href="tenyearsofrebirth/index.html">十年轮回</li>
         <li><a href="pre-suasion/index.html">先发影响力</li>
         <li><a href="economicslecturenotes/index.html">薛兆丰经济学讲义</li>
+        <li><a href="PeddlingProsperity/index.html">兜售繁荣</li>
         <li><a href="influence/index.html">影响力</li>
         <li><a href="scarcity/index.html">稀缺</li>
         <li><a href="toobigtoknow/index.html">知识的边界</li>
