--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
         <li><a href="OneDimensionalMan/index.html">单向度的人</li>
         <li><a href="leananalytics/index.html">精益数据分析</li>
+        <li><a href="Misbehaving/index.html">“错误”的行为</li>
         <li><a href="thelonelycity/index.html">孤独的城市</li>
         <li><a href="environmentalpsychology/index.html">环境心理学</li>
         <li><a href="knowledgeofcoffee/index.html">精品咖啡学</li>
