--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <body>
     <h3>notebook-baku</h3>
     <p>总计</p>
-    <button onclick="myFunction()">统计</button>
+    <button onclick="myFunction()">统计</button> 
     <p id="count"></p>
+    
     <form action=".">
         <div class="form-group">
             <input type="search" class="form-control pull-right" style="width:50%; height:3em" id="search" placeholder="Type to search table...">
@@ -97,6 +98,7 @@
         <li><a href="triz/index.html">创新算法</li>
         <li><a href="sulvzhiwang/index.html">素履之往</li>
         <li><a href="insheepsclothing/index.html">如何与控制型人格相处</li>
+        <li><a href="BorderlinePersonality/index.html">边缘型人格障碍</li>
         <li><a href="originals/index.html">离经叛道</li>
         <li><a href="thetimelesswayofbuilding/index.html">建筑的永恒之道</li>
         <li><a href="motivationandpersonality/index.html">动机与人格</li>
