--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li><a href="TheDesignOfFutureThings/index.html">设计心理学4：未来设计</li>
         <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
         <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
+        <li><a href="ServicesMarketing/index.html">服务营销</li>
         <li><a href="IntuitionPumps/index.html">直觉泵</li>
         <li><a href="StrategyBeyondTheHockeyStick/index.html">突破现实的困境</li>
         <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</li>
