--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <li><a href="Misbehaving/index.html">“错误”的行为</li>
         <li><a href="thelonelycity/index.html">孤独的城市</li>
         <li><a href="environmentalpsychology/index.html">环境心理学</li>
+        <li><a href="TheSocialLifeOfSmallUrbanSpaces/index.html">小城市空间的社会生活</li>
         <li><a href="knowledgeofcoffee/index.html">精品咖啡学</li>
         <li><a href="thelifeofmichaelangelo/index.html">米开朗琪罗传</li>
         <li><a href="el_amoren_los_tiempos_del_colera/index.html">霍乱时期的爱情</li>
