--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <li><a href="TheSocialLifeOfSmallUrbanSpaces/index.html">小城市空间的社会生活</li>
         <li><a href="knowledgeofcoffee/index.html">精品咖啡学</li>
         <li><a href="thelifeofmichaelangelo/index.html">米开朗琪罗传</li>
+        <li><a href="MichelangeloAndThePopesCeiling/index.html">米开朗琪罗与教皇的天花板</li>
         <li><a href="el_amoren_los_tiempos_del_colera/index.html">霍乱时期的爱情</li>
         <li><a href="whatilearnedlosingamilliondollars/index.html">止损</li>
         <li><a href="quackery/index.html">荒诞医学史</li>
