--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <ul id="con">
         <li><a href="Mozart/Mozart.html">莫扎特</li>
         <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
+        <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</li>
         <li><a href="ConsciousnessAndTheBrain/index.html">意识与脑</li>
         <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
         <li><a href="livingwithcomplexity/index.html">设计心理学2：与复杂共处</li>
