--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <li><a href="sprint/index.html">设计冲刺</li>
         <li><a href="theelephantintheroom/index.html">房间里的大象</li>
         <li><a href="thesocialanimal/index.html">社会性动物</li>
+        <li><a href="TheNakedApe/index.html">裸猿</li>
         <li><a href="themostimportantthing/index.html">投资最重要的事</li>
         <li><a href="theplenitude/index.html">够了！创意</li>
         <li><a href="businesslogisticemanagement/index.html">企业物流管理——供应链的规划、组织和控制</li>
