--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </form>
     <ul id="con">
         <li><a href="Mozart/Mozart.html">莫扎特</li>
+        <li><a href="TheLettersofVincentVanGoah/index.html">亲爱的提奥：梵高传</li>
         <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
         <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</li>
         <li><a href="ConsciousnessAndTheBrain/index.html">意识与脑</li>
