--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="Mozart/Mozart.html">莫扎特</li>
         <li><a href="TheLettersofVincentVanGoah/index.html">亲爱的提奥：梵高传</li>
         <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
+        <li><a href="AbnormalPsychology/index.html">变态心理学</li>
         <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</li>
         <li><a href="ConsciousnessAndTheBrain/index.html">意识与脑</li>
         <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
@@ -124,7 +125,6 @@
         <li><a href="TheNakedApe/index.html">裸猿</li>
         <li><a href="themostimportantthing/index.html">投资最重要的事</li>
         <li><a href="theplenitude/index.html">够了！创意</li>
-        <li><a href="businesslogisticemanagement/index.html">企业物流管理——供应链的规划、组织和控制</li>
     </ul>
 </body>
 
