--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li><a href="whatilearnedlosingamilliondollars/index.html">止损</li>
         <li><a href="quackery/index.html">荒诞医学史</li>
         <li><a href="AboutBiology/index.html">生物学相关</li>
+        <li><a href="TheOmnivoresDilemma/index.html">杂食者的两难</li>
         <li><a href="madetostick/index.html">让创意更有粘性</li>
         <li><a href="statisticsforthebehavioralsciences/index.html">行为科学统计</li>
         <li><a href="cognitivepsychology/index.html">认知心理学</li>
