--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <li><a href="TheFifthDiscipline1/index.html">第五项修炼1 学习型组织的艺术与实践</li>
         <li><a href="mechanics/index.html">力学相关</li>
         <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
+        <li><a href="UnderstandingGlobalConflictandCooperation/index.html">理解国际冲突与合作</li>
         <li><a href="WritingOnTheWall/index.html">社交媒体简史</li>
         <li><a href="childenofodin/index.html">奥丁的子女</li>
         <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
