--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <li><a href="TheFutureOfIndustrialMan/index.html">工业人的未来</li>
         <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</li>
         <li><a href="ConceptOfTheCorporation/index.html">公司的概念</li>
+        <li><a href="OnlyTheParanoidSurvive/index.html">只有偏执狂才能生存</li>
         <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
         <li><a href="OneDimensionalMan/index.html">单向度的人</li>
         <li><a href="leananalytics/index.html">精益数据分析</li>
