--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <li><a href="AbnormalPsychology/index.html">变态心理学</li>
         <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</li>
         <li><a href="ConsciousnessAndTheBrain/index.html">意识与脑</li>
+        <li><a href="Neuroscience/index.html">神经科学——探索脑</li>
         <li><a href="thedesignofeverydaythings/index.html">设计心理学1：日常的设计</li>
         <li><a href="livingwithcomplexity/index.html">设计心理学2：与复杂共处</li>
         <li><a href="EmotionalDesign/index.html">设计心理学3：情感化设计</li>
