--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><a href="CriticalThinking/index.html">批判性思维</li>
         <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
         <li><a href="ServicesMarketing/index.html">服务营销</li>
+        <li><a href="UnderstandingMedia/index.html">理解媒介</li>
         <li><a href="TheMiddlemanEconomy/index.html">中间人经济</li>
         <li><a href="IntuitionPumps/index.html">直觉泵</li>
         <li><a href="StrategyBeyondTheHockeyStick/index.html">突破现实的困境</li>
