--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
         <li><a href="AskingTheRightQuestions/index.html">学会提问</li>
         <li><a href="CriticalThinking/index.html">批判性思维</li>
+        <li><a href="TheModelThinker/index.html">模型思维</li>
         <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
         <li><a href="ServicesMarketing/index.html">服务营销</li>
         <li><a href="UnderstandingMedia/index.html">理解媒介</li>
@@ -76,6 +77,7 @@
         <li><a href="OnlyTheParanoidSurvive/index.html">只有偏执狂才能生存</li>
         <li><a href="notebook-onbeingaperson/index.html">个人形成论</li>
         <li><a href="OneDimensionalMan/index.html">单向度的人</li>
+        <li><a href="ChineseCharacteristics/index.html">中国人的性格</li>
         <li><a href="leananalytics/index.html">精益数据分析</li>
         <li><a href="Factfulness/index.html">事实：用数据思考，避免情绪化决策</li>
         <li><a href="Misbehaving/index.html">“错误”的行为</li>
