--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
         <li><a href="AbnormalPsychology/index.html">变态心理学</li>
         <li><a href="HowToThinkStraightAboutPsychology/index.html">对伪心理学说不</li>
+        <li><a href="FortyStudiesThatChangedPsychology/index.html">改变心理学的40项研究</li>
         <li><a href="TheArtOfDeception/index.html">欺骗的艺术</li>
         <li><a href="ConsciousnessAndTheBrain/index.html">意识与脑</li>
         <li><a href="Neuroscience/index.html">神经科学——探索脑</li>
