--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="TheDesignOfFutureThings/index.html">设计心理学4：未来设计</li>
         <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
         <li><a href="AskingTheRightQuestions/index.html">学会提问</li>
+        <li><a href="TheBookOfWhy/index.html">为什么——关于因果关系的新科学</li>
         <li><a href="CriticalThinking/index.html">批判性思维</li>
         <li><a href="TheModelThinker/index.html">模型思维</li>
         <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
