finish amusing ourselves to death

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
         <li><a href="UnderstandingGlobalConflictandCooperation/index.html">理解国际冲突与合作</li>
         <li><a href="WritingOnTheWall/index.html">社交媒体简史</li>
+        <li><a href="AmusingOurselvesToDeath/index.html">娱乐至死</li>
         <li><a href="childenofodin/index.html">奥丁的子女</li>
         <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
         <li><a href="IntimateRelationships/index.html">社会心理学-亲密关系</li>
