--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <li><a href="childenofodin/index.html">奥丁的子女</li>
         <li><a href="socialpsychology/index.html">迈尔斯社会心理学</li>
         <li><a href="IntimateRelationships/index.html">社会心理学-亲密关系</li>
-	<li><a href="OnnaGirai/index.html">厌女————日本的女性嫌恶</li>
+	    <li><a href="OnnaGirai/index.html">厌女————日本的女性嫌恶</li>
         <li><a href="tenyearsofrebirth/index.html">十年轮回</li>
         <li><a href="pre-suasion/index.html">先发影响力</li>
         <li><a href="economicslecturenotes/index.html">薛兆丰经济学讲义</li>
@@ -119,6 +119,7 @@
         <li><a href="scarcity/index.html">稀缺</li>
         <li><a href="toobigtoknow/index.html">知识的边界</li>
         <li><a href="story/index.html">故事</li>
+        <li><a href="SoulStealers/index.html">叫魂</li>    
         <li><a href="thestoryofart/index.html">艺术的故事</li>
         <li><a href="themillionairenextdoor/index.html">邻家的百万富翁</li>
         <li><a href="triz/index.html">创新算法</li>
