--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <li><a href="EmotionalDesign/index.html">设计心理学3：情感化设计</li>
         <li><a href="TheDesignOfFutureThings/index.html">设计心理学4：未来设计</li>
         <li><a href="AreyouLightsOn/index.html">你的灯还亮着吗——发现问题的真正所在</li>
+        <li><a href="BecomingaTechicalLeader/index.html">成为技术领导者</li>
         <li><a href="AskingTheRightQuestions/index.html">学会提问</li>
         <li><a href="TheBookOfWhy/index.html">为什么——关于因果关系的新科学</li>
         <li><a href="CriticalThinking/index.html">批判性思维</li>
