finish reading the lonely city

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <li><a href="AskingTheRightQuestions/index.html">学会提问</li>
         <li><a href="TheBookOfWhy/index.html">为什么——关于因果关系的新科学</li>
         <li><a href="CriticalThinking/index.html">批判性思维</li>
+        <li><a href="PlatoAndAPlatypusWalkIntoABar/index.html">柏拉图和鸭嘴兽一起去酒吧</li>
         <li><a href="TheModelThinker/index.html">模型思维</li>
         <li><a href="ServiceDesign/index.html">服务设计与创新实践</li>
         <li><a href="ServicesMarketing/index.html">服务营销</li>
