--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <li><a href="Factfulness/index.html">事实：用数据思考，避免情绪化决策</li>
         <li><a href="Misbehaving/index.html">“错误”的行为</li>
         <li><a href="thelonelycity/index.html">孤独的城市</li>
+        <li><a href="OnPhotography/index.html">论摄影</li>
         <li><a href="environmentalpsychology/index.html">环境心理学</li>
         <li><a href="TheSocialLifeOfSmallUrbanSpaces/index.html">小城市空间的社会生活</li>
         <li><a href="knowledgeofcoffee/index.html">精品咖啡学</li>
