--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <li><a href="howgoogleworks/index.html">重新定义公司 谷歌是如何运营的</li>
         <li><a href="TheFifthDiscipline1/index.html">第五项修炼1 学习型组织的艺术与实践</li>
         <li><a href="mechanics/index.html">力学相关</li>
-        <li><a href="thehistoryofmoderneurope/index.html">欧洲现代史</li>
+        <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</li>
         <li><a href="UnderstandingGlobalConflictandCooperation/index.html">理解国际冲突与合作</li>
         <li><a href="TheHumanSwarm/index.html">从部落到国家 人类社会的崛起,繁荣与衰落</li>
         <li><a href="TheCulturalOriginsOfHumanCognition/index.html">人类认知的文化起源</li>
@@ -143,6 +143,7 @@
         <li><a href="theelephantintheroom/index.html">房间里的大象</li>
         <li><a href="thesocialanimal/index.html">社会性动物</li>
         <li><a href="TheNakedApe/index.html">裸猿</li>
+        <li><a href="DownGirl/index.html">不只是厌女</li>
         <li><a href="themostimportantthing/index.html">投资最重要的事</li>
         <li><a href="theplenitude/index.html">够了！创意</li>
     </ul>
