读完了草间弥生的自传

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </form>
     <ul id="con">
         <li><a href="Mozart/Mozart.html">莫扎特</li>
+        <li><a href="TheAutobiographyOfYayoiKusama/TheAutobiographyOfYayoiKusama.html">无限的网: 草间弥生自传</li>            
         <li><a href="TheLettersofVincentVanGoah/index.html">亲爱的提奥：梵高传</li>
         <li><a href="EvolutionaryPsychology/index.html">进化心理学</li>
         <li><a href="AbnormalPsychology/index.html">变态心理学</li>
