a history of modern europe 28%

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <li><a href="TheFifthDiscipline1/index.html">第五项修炼1 学习型组织的艺术与实践</li>
         <li><a href="mechanics/index.html">力学相关</li>
         <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</li>
+        <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国</li>    
         <li><a href="UnderstandingGlobalConflictandCooperation/index.html">理解国际冲突与合作</li>
         <li><a href="TheHumanSwarm/index.html">从部落到国家 人类社会的崛起,繁荣与衰落</li>
         <li><a href="TheCulturalOriginsOfHumanCognition/index.html">人类认知的文化起源</li>
