--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
             <h2>神话</h2> 
             <ul>
             <li><a href="childenofodin/index.html">奥丁的子女</a></li>
+            <li><a href="Myth/8kuNoteBook_Myth.html">神话</a></li>
             </ul>
         </div>
         
