--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             <ul>
             <li><a href="quackery/index.html">荒诞医学史</a></li>
             <li><a href="zenandartofmotorcyclemaintenance/index.html">禅与摩托车维修艺术</a></li>
-            <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史</a></li>
+            <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史 26%</a></li>
             <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</a></li>
-            <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国</a></li>
+            <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国 7%</a></li>
             <li><a href="thestoryofart/index.html">艺术的故事</a></li>
             <li><a href="Art_Painting/8kuNoteBook_Painting.html">美术史</a></li>
             <li><a href="Art_Music/8kuNoteBook_Music.html">音乐史</a></li>
@@ -165,7 +165,7 @@
             <li><a href="WritingOnTheWall/index.html">社交媒体简史</a></li>
             <li><a href="AmusingOurselvesToDeath/index.html">娱乐至死</a></li>
             <li><a href="OnnaGirai/index.html">厌女————日本的女性嫌恶</a></li>
-            <li><a href="DownGirl/index.html">不只是厌女</a></li>
+            <li><a href="DownGirl/index.html">不只是厌女 26%</a></li>
             <li><a href="Evicted/index.html">扫地出门--美国的贫穷与暴利</a></li>
             <li><a href="SoulStealers/index.html">叫魂</a></li>  
             </ul> 
@@ -192,7 +192,7 @@
             <li><a href="environmentalpsychology/index.html">环境心理学</a></li>
             <li><a href="TheSocialLifeOfSmallUrbanSpaces/index.html">小城市空间的社会生活</a></li>
             <li><a href="thetimelesswayofbuilding/index.html">建筑的永恒之道</a></li> 
-            <li><a href="TheDeathAndLIfeOfGreatAmericanCities/index.html">美国大城市的生与死</a></li> 
+            <li><a href="TheDeathAndLIfeOfGreatAmericanCities/index.html">美国大城市的生与死 66%</a></li> 
             </ul>           
         </div> 
 
