--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <li><a href="aboutface/index.html">交互设计精髓</a></li>
             <li><a href="designingwiththemindinmind/index.html">认知与设计</a></li>
             <li><a href="theexperienceeconomy/index.html">体验经济</a></li>
+            <li><a href="UsabilityTesting/docs/index.html">用户体验与可用性测试</a></li>
             <li><a href="changebydesign/index.html">IDEO</a></li>
             <li><a href="sprint/index.html">设计冲刺</a></li>
             <li><a href="themostimportantthing/index.html">投资最重要的事</a></li>
