finish reading MedievalEurope

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <ul>
             <li><a href="quackery/index.html">荒诞医学史</a></li>
             <li><a href="zenandartofmotorcyclemaintenance/index.html">禅与摩托车维修艺术</a></li>
-            <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史 71%</a></li>
+            <li><a href="MedievalEurope/8kuNoteBook_MedievalEurope.html">欧洲中世纪史</a></li>
             <li><a href="aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html">欧洲现代史</a></li>
             <li><a href="EmpireOfCotton/8kuNoteBook_EmpireOfCotton.html">棉花帝国 7%</a></li>
             <li><a href="Art_Painting/8kuNoteBook_Painting.html">美术史/艺术的故事</a></li>
