--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
             <li><a href="PeddlingProsperity/index.html">兜售繁荣</a></li>
             </ul>
         </div>
+
+        <div>
+            <h2>哲学</h2>
+            <ul>
+            <li><a href="Philosophy/8kuNoteBook_Philosophy.html">哲学</a></li> 
+            </ul>
+        </div>
     </div>
 </body>
 
