update history of Japan

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <li><a href="IntuitionPumps/index.html">直觉泵</a></li>
             <li><a href="StrategyBeyondTheHockeyStick/index.html">突破现实的困境</a></li>
             <li><a href="notebook-theeffectiveexecutive/index.html">卓有成效的管理者</a></li>
+            <li><a href="NoRulesRules/index.html">不拘一格：网飞的自由与责任工作法</a></li>
             <li><a href="TheFutureOfIndustrialMan/index.html">工业人的未来</a></li>
             <li><a href="managementchanllengeforthe21stcentury/index.html">21世纪管理挑战</a></li>
             <li><a href="ConceptOfTheCorporation/index.html">公司的概念</a></li>
